--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,12 @@ header h2 {
 .carousel {
     border: solid #5637DD;
 }
-
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+}
 a, a:hover {
     color: inherit;
     text-decoration: none;
