--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,14 @@ header h2 {
   bottom: 0;
   z-index: 100; }
 
+#reserveModal .modal-header {
+  background-color: #17A2B8;
+  color: white; }
+
+#loginModal .modal-header {
+  background-color: #901CAD;
+  color: white; }
+
 a, a:hover {
   color: inherit;
   text-decoration: none; }
